// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile class name from tag 1`] = `
"import React from \\"react\\"

export default function() {
  return React.createElement(\\"div\\", {
    className: \\"class-name\\",
  }), React.createElement(\\"article\\", { className: \\"title is-active\\" })
}
"
`;

exports[`compile conditions 1`] = `
"import React from \\"react\\"

export default function({ foo }) {
  return foo == \\"bar\\"
    ? React.createElement(\\"p\\", null, \` Foo is bar\`)
    : React.createElement(\\"p\\", null, \` Nope\`)
}
"
`;

exports[`compile form tag 1`] = `
"import React from \\"react\\"

export default function() {
  return React.createElement(\\"form\\", null)
}
"
`;

exports[`compile html and components 1`] = `
"import React from \\"react\\"

export default function({ value }) {
  return React.createElement(
    \\"body\\",
    null,
    React.createElement(Header, { title: \\"hello world\\" }),
    React.createElement(
      Content,
      null,
      React.createElement(\\"section\\", { className: \\"container\\" }),
    ),
    React.createElement(Footer, { value: value }),
  )
}
"
`;

exports[`compile import statements 1`] = `
"import React from \\"react\\"
import { one, two, three } from \\"four.js\\"
import test from \\"test-pkg\\"
import Constructor from \\"Module\\"

export default function() {
  return React.createElement(
    \\"body\\",
    null,
    React.createElement(\\"header\\", { className: \\"header\\" }),
    React.createElement(\\"footer\\", null),
  )
}
"
`;

exports[`compile loop 1`] = `
"import React from \\"react\\"

export default function({ something }) {
  return something.map((name, index) =>
    React.createElement(\\"input\\", { value: name }),
  )
}
"
`;

exports[`compile single tag 1`] = `
"import React from \\"react\\"

export default function() {
  return React.createElement(\\"div\\", null)
}
"
`;

exports[`compile text 1`] = `
"import React from \\"react\\"

export default function() {
  return React.createElement(
    \\"p\\",
    null,
    \` hello world\`,
    \`!\`,
  ), React.createElement(
    \\"p\\",
    null,
    \`  here goes a long
  block of text
\`,
  ), React.createElement(
    \\"div\\",
    null,
    React.createElement(\\"text\\", null, \` Also a text\`),
  )
}
"
`;

exports[`compile with name 1`] = `
"import React from \\"react\\"

const ComponentName = () => {
  return React.createElement(\\"div\\", null)
}

export default ComponentName
"
`;
